@@ -1,3 +1,8 @@
+2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerated.
+
 2009-07-10  Doug Kwan  <dougkwan@google.com>
 
 	* elf32-arm.c (stub_hash_newfunc): Initialize fields
